try out the sticky footer in bootstrap, using fixed-bottom class, but be aware need to add margin in body to make room for main content, avoid covered by sticky footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,10 +8,11 @@ html{
     font-size:1em;
 }
 body{
-    margin-bottom:-70px;
+    margin-bottom:90px;  /*important adding this margin if use "sticky footer" in bootstrap otherwise some content might get covered by footer space */
     background-image:url("../images/circles-dark.png");
-    height:100%;
+    min-height:100%;
 }
+
 h2{
     font-family: 'Times New Roman', Times, serif;
     font-size:2.5em;
